--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,22 @@
     color: #fff;
 }
 
+.loading-gif {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw; /* Use viewport width */
+    height: 100vh; /* Use viewport height */
+    background-color: #000; /* Change background color to black */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it's above other elements */
+}
+
 .loading-gif video {
+	max-width: 100%;
+	max-height: 100%;
     width: 100%; /* Adjust the width to fill the container */
     height: 100%; /* Adjust the height to fill the container */
     object-fit: contain; /* Ensure the entire video is visible */
