--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Font Family  */
+/* Font Family */
 @font-face {
     font-family: 'AngryBirds';
     src: url('BIN/fonts/angrybirds-regular.ttf') format('truetype');
@@ -9,7 +9,9 @@
     src: url('BIN/fonts/naruto.ttf') format('truetype');
 }
 
-*, ::before, ::after {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     transition: .3s;
@@ -17,19 +19,43 @@
     color: #fff;
 }
 
+/* Adjust layout for smaller screens */
+@media only screen and (max-width: 768px) {
+    .navbar ul {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .navbar .logo {
+        font-size: 1.5rem;
+    }
+
+    .loading-gif video {
+        width: 150px;
+    }
+}
+
 .responsive-gif {
     max-width: 100%;
     height: auto;
 }
 
-.loading-gif video {
+.loading-gif {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.loading-gif video {
+    width: 100%;
+    height: auto;
 }
 
 .hide {
@@ -40,8 +66,8 @@ video {
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     pointer-events: none;
     z-index: -1;
@@ -103,7 +129,7 @@ video {
 }
 
 .page-content .buttons {
-    display: ruby-text;
+    display: flex;
     justify-content: center;
     margin-top: 20px;
 }
@@ -116,8 +142,12 @@ video {
     padding: 10px 12px;
     border-radius: 6px;
     font-size: 13px;
+    min-width: 120px;
     text-align: center;
     position: relative;
+    backdrop-filter: blur(60px);
+    overflow: hidden;
+    z-index: 1;
     border: 1px solid #ffffff1e;
 }
 
@@ -140,7 +170,7 @@ video {
     z-index: -1;
 }
 
-.page-content .buttons a:nth-child(2):hover::before { 
+.page-content .buttons a:nth-child(2):hover::before {
     left: 100%;
 }
 
@@ -166,6 +196,7 @@ video {
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    backdrop-filter: blur(160px);
     background: #c624f71e;
     overflow: hidden;
     position: relative;
@@ -183,7 +214,7 @@ video {
     z-index: -1;
 }
 
-.page-content .social-links a:hover::after { 
+.page-content .social-links a:hover::after {
     height: 100%;
 }
 
@@ -213,7 +244,8 @@ video {
     margin: 20px;
 }
 
-h2, p {
+h2,
+p {
     font-family: 'AngryBirds', sans-serif;
     font-size: 15px;
     color: #fff;
@@ -226,11 +258,11 @@ h2, p {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background color */
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 20px;
     box-sizing: border-box;
-    opacity: 0; /* Initially hide content */
-    transition: opacity 0.3s ease-in-out; /* Add transition for smooth opacity change */
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .card:hover {
@@ -254,16 +286,73 @@ h2, p {
     border-radius: 100%;
     object-fit: cover;
     display: block;
-    margin: 0 auto 15px; /* Center the image */
+    margin: 0 auto 15px;
     transition: transform 0.3s ease-in-out;
 }
 
 .card a {
-    pointer-events: auto; /* Ensure links are clickable */
+    pointer-events: auto;
 }
 
 .content-container {
-    height: calc(100vh - 200px); /* Adjust the height based on your navbar's height */
-    overflow-y: auto; /* Enable vertical scrolling */
-    padding-top: 56px; /* Adjust padding to avoid content being hidden behind the navbar */
+    height: calc(100vh - 200px);
+    overflow-y: auto;
+    padding-top: 56px;
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        max-width: fit-content;
+        margin: auto;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar {
+        padding: 12px 10px;
+    }
+
+    .navbar .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .navbar .logo {
+        font-family: 'AngryBirds', sans-serif;
+        text-decoration: none;
+        font-size: 2rem;
+    }
+
+    .navbar ul {
+        list-style-type: none;
+        display: flex;
+    }
+
+    .navbar ul a {
+        display: block;
+        text-decoration: none;
+        margin: 10px 0;
+        padding: 8px 16px;
+        font-family: 'AngryBirds', sans-serif;
+        position: relative;
+    }
+
+    .navbar ul:has(a:hover) a:not(:hover) {
+        filter: blur(10px);
+    }
+
+    .navbar ul li {
+        margin: 10px 0;
+    }
+
+    .page-content .inner-content .heading {
+        font-size: 15vw;
+    }
+
+    .page-content .buttons {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
 }
