--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,34 @@
         margin: 10px 0;
     }
 
+    .navbar .menu-toggle {
+        display: block;
+        position: absolute;
+        top: 12px;
+        right: 10px;
+        cursor: pointer;
+        opacity: 0;
+        z-index: -1;
+    }
+
+    .menu-icon {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .menu-toggle:checked + .menu-icon .bi-list {
+        transform: rotate(90deg);
+    }
+
+    .menu-toggle:checked + .menu {
+        display: block;
+    }
+
     .page-content .inner-content .heading {
         font-size: 15vw;
     }
